k8s/auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  namespace: note
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: auth-server
          image: 019511184889.dkr.ecr.ap-northeast-2.amazonaws.com/auth-server:8
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: note
spec:
  selector:
    app: auth-server
  ports:
    - port: 9000
      targetPort: 9000
