k8s/react-note.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-note
  namespace: note
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-note
  template:
    metadata:
      labels:
        app: react-note
    spec:
      containers:
        - name: react-note
          image: 019511184889.dkr.ecr.ap-southeast-2.amazonaws.com/react-note:latest
          ports:
            - containerPort: 80
---
# gitops 테스트 주석
apiVersion: v1
kind: Service
metadata:
  name: react-note
  namespace: note
spec:
  selector:
    app: react-note
  ports:
    - port: 80
      targetPort: 80
