k8s/ingress.yaml
# k3s 기본 Traefik 사용 시. 15.135.200.232.nip.io 교체 후 cert-manager 또는 TLS secret 연동
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-ingress
  namespace: note
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: app.13.239.220.205.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-note
                port:
                  number: 80
    - host: api.13.239.220.205.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-note-api
                port:
                  number: 8082
    - host: auth.13.239.220.205.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-server
                port:
                  number: 9000
